--- a/scss/util/_color.scss
+++ b/scss/util/_color.scss
@@ -9,11 +9,11 @@ $contrast-warnings: true !default;
 ////
 /// Patch to fix issue #12080
 
-$primary-color   : null !default;
-$secondary-color : null !default;
-$warning-color   : null !default;
-$alert-color     : null !default;
-$success-color   : null !default;
+$primary-color: null !default;
+$secondary-color: null !default;
+$warning-color: null !default;
+$alert-color: null !default;
+$success-color: null !default;
 ////
 
 ////
@@ -85,7 +85,7 @@ $success-color   : null !default;
   }
 
   @if ($contrast-warnings and $contrast < 3) {
-    @warn "Contrast ratio of #{$best} on #{$base} is pretty bad, just #{$contrast}";
+    @warn 'Contrast ratio of #{$best} on #{$base} is pretty bad, just #{$contrast}';
   }
 
   @return $best;
