--- a/scss/util/_math.scss
+++ b/scss/util/_math.scss
@@ -30,7 +30,7 @@
 /// @returns {Number} The product of the exponentiation.
 @function pow($base, $exponent, $prec: 16) {
   @if (floor($exponent) != $exponent) {
-    $prec2 : pow(10, $prec);
+    $prec2: pow(10, $prec);
     $exponent: round($exponent * $prec2);
     $denominator: gcd($exponent, $prec2);
     @return nth-root(pow($base, divide($exponent, $denominator)), divide($prec2, $denominator), $prec);
@@ -98,8 +98,8 @@
   @else if type-of($fraction) == 'list' {
     // "50 of 100", "50/100"...
     @if length($fraction) == 3
-      and type-of(nth($fraction, 1) == 'number')
-      and type-of(nth($fraction, 3) == 'number') {
+    and type-of(nth($fraction, 1) == 'number')
+    and type-of(nth($fraction, 3) == 'number') {
       @return (nth($fraction, 1), nth($fraction, 3));
     }
   }
@@ -161,7 +161,7 @@
     @return 0;
   }
   @if $divisor == 0 {
-    @error "Cannot divide by 0";
+    @error 'Cannot divide by 0';
   }
   $remainder: $dividend;
   $result: 0;
@@ -173,7 +173,7 @@
       $quotient: $quotient + 1;
     }
     $result: $result * 10 + $quotient;
-    $factor: $factor * .1;
+    $factor: $factor * 0.1;
     $remainder: $remainder * 10;
     $precision: $precision - 1;
     @if ($precision < 0 and $remainder >= $divisor * 5) {
@@ -184,10 +184,10 @@
   $dividend-unit: unit($dividend);
   $divisor-unit: unit($divisor);
   $unit-map: (
-    "px": 1px,
-    "rem": 1rem,
-    "em": 1em,
-    "%": 1%
+    'px': 1px,
+    'rem': 1rem,
+    'em': 1em,
+    '%': 1%
   );
   @if ($dividend-unit != $divisor-unit and map-has-key($unit-map, $dividend-unit)) {
     $result: $result * map-get($unit-map, $dividend-unit);
