--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -234,6 +234,7 @@ $global-color-pick-contrast-tolerance: 0 !default;
   // Prevent text overflow on pre
   pre {
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
   }
 
   // Make reset inherit font-family instead of settings sans-serif
