--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -374,7 +374,7 @@ $button-responsive-expanded: false !default;
         @include button-fill-style($filling);
 
         @each $name, $color in $button-palette {
-          &.#{$name} {
+          &.#{"" + $name} {
             @include button-fill-style($filling, $color, auto, auto);
           }
         }
@@ -402,7 +402,7 @@ $button-responsive-expanded: false !default;
         }
 
         @each $name, $color in $button-palette {
-          &.#{$name} {
+          &.#{"" + $name} {
             &::after {
               border-top-color: $color;
             }
