refactor: fix mixed declarations warnings on sass-embedded 1.77.7+
Where possible, moves mixins that have nested declarations later in definitions or
re-orders declarations where the order doesn't matter.

Accordingly, disables the sass-lint rule. Without deterministically ordered mixins
it's not possible to cleanly avoid interleaved declarations and nested blocks without
using `& {}` everywhere.

--- a/scss/components/_top-bar.scss
+++ b/scss/components/_top-bar.scss
@@ -32,6 +32,8 @@ $topbar-unstack-breakpoint: medium !default;
 
 /// Adds styles for a top bar container.
 @mixin top-bar-container {
+  padding: $topbar-padding;
+
   @if $global-flexbox {
     display: flex;
     flex-wrap: nowrap;
@@ -41,8 +43,6 @@ $topbar-unstack-breakpoint: medium !default;
   @else {
     @include clearfix;
   }
-
-  padding: $topbar-padding;
 
   &,
   ul {
@@ -76,7 +76,9 @@ $topbar-unstack-breakpoint: medium !default;
 /// Makes sections of a top bar stack on top of each other.
 @mixin top-bar-stacked {
   @if $global-flexbox {
-    flex-wrap: wrap;
+    & {
+      flex-wrap: wrap;
+    }
 
     // Sub-sections
     .top-bar-left,
