--- a/scss/components/_button-group.scss
+++ b/scss/components/_button-group.scss
@@ -33,14 +33,16 @@ $buttongroup-radius-on-each: true !default;
   $child-selector: $buttongroup-child-selector,
   $spacing: $buttongroup-spacing
 ) {
-  @include clearfix;
   margin-bottom: $buttongroup-margin;
+  @include clearfix;
 
   @if $global-flexbox {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-    flex-grow: 1;
+    & {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: stretch;
+      flex-grow: 1;
+    }
 
     &::before,
     &::after {
@@ -48,7 +50,9 @@ $buttongroup-radius-on-each: true !default;
     }
   }
   @else {
-    font-size: 0;
+    & {
+      font-size: 0;
+    }
   }
 
   #{$child-selector} {
